fikset feil, json filene kan nå vises på index

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     {% for film in filmer %}
-        <h1>{{filmer["navn"]}}</h1>
+        <h1>{{film["navn"]}}</h1>
     {% endfor %}
 </body>
 </html>
