--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,7 @@
 {% extends "mal.html" %}
+{% block head %}
+    <title>Hjem</title>
+{% endblock %}
 
 {% block main %}
     {% for film in filmer %}
