--- a/templates/mal.html
+++ b/templates/mal.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href='{{url_for("static", filename="header.css")}}'>
     <link rel="stylesheet" href='{{url_for("static", filename="style.css")}}'>
+    {% block head %}
+    {% endblock %}
 </head>
 <body>
     <header>
@@ -18,7 +19,6 @@
     </header>
     <main>
         {% block main %}
-    
         {% endblock %}
     </main>
 </body>
