header css finpuss

--- a/static/header.css
+++ b/static/header.css
@@ -6,5 +6,26 @@ header{
     justify-content: center;
 }
 .logo{
-    width: 10%;
+    width: 12%;
+}
+header div {
+    width: 50%;
+    margin: 1%;
+}
+nav{
+    display: flex;
+    justify-content: end;
+    margin-right: 10%;
+    gap: 5%;
+}
+nav a{
+    font-size: 20px;
+    font-weight: bold;
+    text-decoration: none;
+    color: black;
+    border-bottom: #EFCA08 solid 2px;
+}
+nav a:hover{
+    border-bottom: solid black 2px;
+    transition: 0.5s;
 }
