--- a/templates/mal.html
+++ b/templates/mal.html
@@ -17,7 +17,7 @@
         <div>
             <nav>
                 <a href="/sok">Søk</a>
-                <a href="/populaert">Populært nå</a>
+                <a href="/populaert">Populært</a>
             </nav>
         </div>
     </header>
