--- a/static/header.css
+++ b/static/header.css
@@ -4,6 +4,7 @@ header{
     display: flex;
     align-items: center;
     justify-content: center;
+    border-bottom: solid 4px #204B57;
 }
 .logo{
     width: 12%;
