--- a/static/index.css
+++ b/static/index.css
@@ -1,9 +1,3 @@
-#indexheader{
+.underheader{
     background-color: #1cb2a6;
-    color: white;
-    padding: 10px;
-    text-align: center;
-    border-bottom: solid 4px #204B57;
-    display: flex;
-    justify-content: center;
 }
