--- a/templates/index.html
+++ b/templates/index.html
@@ -5,11 +5,9 @@
 {% endblock %}
 
 {% block main %}
-    <div id="indexheader">
-        <div>
-            <h1>Filmsiden</h1>
-            <h2>Finn dine yndlingsfilmer</h2>
-        </div>
+    <div class="underheader">
+        <h1>Filmsiden</h1>
+        <h2>Finn dine yndlingsfilmer</h2>
     </div>
     <section>
         {% for film in filmer %}
