--- a/static/index.css
+++ b/static/index.css
@@ -1,3 +1,25 @@
 .underheader{
     background-color: #1cb2a6;
 }
+#favorittSection{
+    display: flex;
+    width: 95%;
+    margin: auto;
+}
+#favorittSection div{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.indexPoster{
+    width: 60%;
+    border: solid 2px #204B57;
+}
+.okPoengPil{
+    width: 10%;
+}
+.knappIndex{
+    background-color: white;
+    border: none;
+}
