--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,9 @@
         <h1>Filmsiden</h1>
         <h2>Finn dine yndlingsfilmer</h2>
     </div>
+    <div class="underheader bakgrunnRoed" id="favorittliste">
+        <h2>Under kan du velge hvilken av de to filmene du liker best og til slutte finne din yndlingsfilm blant top 250 filmer hos IMDB</h2>
+    </div>
     <section id="favorittSection">
         {% for nummer in tilfeldige_nummer %}
             <div>
