--- a/static/index.css
+++ b/static/index.css
@@ -35,3 +35,12 @@
     border-top: solid 4px #204B57;
     margin-top: 2vh;
 }
+.knapp{
+    background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
