--- a/templates/error.html
+++ b/templates/error.html
@@ -3,6 +3,6 @@
 {% block main %}
     <h1>Oi!</h1>
     <h2>Det der ut som at søket ditt ikke ga resultater</h2>
-    <h2>Prøv å være litt mere spesifikk på filmen du vil finne</h2>
+    <h2>Prøv å være mere spesifikk i søket</h2>
 
 {% endblock %}
